cmake_minimum_required(VERSION 3.12)
project(rocprofvis-datamodel-lib VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_EXTENSIONS OFF)


set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCPPBUILD")
if(DEFINED TEST)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTEST")
file(GLOB MAIN_SRC CONFIGURE_DEPENDS "src/test/*.cpp")
endif(DEFINED TEST)


file(GLOB COMMON_SRC CONFIGURE_DEPENDS "src/common/*.cpp")
file(GLOB DATAMODEL_SRC CONFIGURE_DEPENDS "src/datamodel/*.cpp")
file(GLOB DATABASE_SRC CONFIGURE_DEPENDS "src/database/*.cpp")
file(GLOB SQLITE3_SRC CONFIGURE_DEPENDS "src/database/sqlite3/*.c")


add_library(${PROJECT_NAME} ${DATAMODEL_SRC} ${DATABASE_SRC} ${DATABASE_SRC} ${COMMON_SRC} ${SQLITE3_SRC})
if(DEFINED TEST)
add_executable(${PROJECT_NAME}-test ${MAIN_SRC})
target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
endif(DEFINED TEST)