include(CMakePrintHelpers)
cmake_minimum_required(VERSION 3.12)
project(datamodel VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(../../thirdparty/sqlite3 thirdparty/sqlite3)

include_directories(inc ${CMAKE_CURRENT_SOURCE_DIR}/src/common ${CMAKE_CURRENT_SOURCE_DIR}/src/database ${CMAKE_CURRENT_SOURCE_DIR}/src/datamodel ${CMAKE_CURRENT_SOURCE_DIR}/../controller/inc)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
#set(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCPPBUILD")
if (UNIX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
endif(UNIX)
if(TEST)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTEST -O2 -DDEBUG")
if (WIN32)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Zi")
endif(WIN32)
if (UNIX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
endif(UNIX)
endif(TEST)
cmake_print_variables(CMAKE_CXX_FLAGS)
cmake_print_variables(CMAKE_C_FLAGS)


file(GLOB COMMON_SRC CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/common/*.cpp")
file(GLOB DATAMODEL_SRC CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/datamodel/*.cpp")
file(GLOB DATABASE_SRC CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/database/*.cpp")
file(GLOB MAIN_SRC CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/test/*.cpp")


add_library(${PROJECT_NAME} ${DATAMODEL_SRC} ${DATABASE_SRC} ${DATABASE_SRC} ${COMMON_SRC} )
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../core/inc)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../thirdparty/jsoncpp)
target_link_libraries(${PROJECT_NAME} roc-optiq-core)
target_link_libraries(${PROJECT_NAME} sqlite3)
target_link_libraries(${PROJECT_NAME} spdlog)
target_link_libraries(${PROJECT_NAME} yaml-cpp)
target_link_libraries(${PROJECT_NAME} json)

# TBB is conditionally required on Linux when libtbb-dev is installed
# - Windows MSVC: Has its own parallel backend, doesn't need TBB
# - macOS: Parallel execution not yet supported in libc++
# - Linux GCC: Auto-detects TBB headers and switches to TBB backend if available
find_package(TBB QUIET)
if(TBB_FOUND)
    target_link_libraries(${PROJECT_NAME} TBB::tbb)
    message(STATUS "TBB found and linked for parallel execution policies")
else()
    message(STATUS "TBB not found - parallel execution will use platform default")
endif()

if(BUILD_TESTING)
    # The legacy datamodel-test harness pulls in <curses.h> which isn't
    # available in cross-compilation toolchains (e.g. Emscripten). Gating
    # it on BUILD_TESTING keeps the default native build (BUILD_TESTING=ON)
    # unchanged while letting the WASM build skip it via -DBUILD_TESTING=OFF.
    add_executable(${PROJECT_NAME}-test ${MAIN_SRC} )
    target_include_directories(${PROJECT_NAME}-test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../core/inc)
    target_include_directories(${PROJECT_NAME}-test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../thirdparty/jsoncpp)
    target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
    target_link_libraries(${PROJECT_NAME}-test roc-optiq-core)
    target_link_libraries(${PROJECT_NAME}-test spdlog)
    target_link_libraries(${PROJECT_NAME}-test sqlite3)
    target_link_libraries(${PROJECT_NAME}-test json)


	set(SYSTEM_TEST_NAME ${PROJECT_NAME}-system-tests)
	set(COMPUTE_TEST_NAME ${PROJECT_NAME}-compute-tests)
    add_executable(${SYSTEM_TEST_NAME} src/tests/rocprofvis_dm_system_tests.cpp)
    target_include_directories(${SYSTEM_TEST_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../core/inc)
    target_include_directories(${SYSTEM_TEST_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../thirdparty/jsoncpp)
    target_link_libraries(${SYSTEM_TEST_NAME} PRIVATE ${PROJECT_NAME})
    target_link_libraries(${SYSTEM_TEST_NAME} PRIVATE Catch2::Catch2WithMain)
    target_link_libraries(${SYSTEM_TEST_NAME} PRIVATE roc-optiq-core)
    target_link_libraries(${SYSTEM_TEST_NAME} PRIVATE spdlog)
    target_link_libraries(${SYSTEM_TEST_NAME} PRIVATE sqlite3)
    target_link_libraries(${SYSTEM_TEST_NAME} PRIVATE json)	
    add_test(NAME ${SYSTEM_TEST_NAME}-RPD COMMAND ${SYSTEM_TEST_NAME} --input_file "${CMAKE_SOURCE_DIR}/sample/trace_70b_1024_32.rpd")
    set_tests_properties(${SYSTEM_TEST_NAME}-RPD PROPERTIES RUN_SERIAL ON)
    set_tests_properties(${SYSTEM_TEST_NAME}-RPD PROPERTIES WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
    add_test(NAME ${SYSTEM_TEST_NAME}-DB COMMAND ${SYSTEM_TEST_NAME} --input_file "${CMAKE_SOURCE_DIR}/sample/rocpd-transpose.db")
    set_tests_properties(${SYSTEM_TEST_NAME}-DB PROPERTIES RUN_SERIAL ON)
    set_tests_properties(${SYSTEM_TEST_NAME}-DB PROPERTIES WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
	add_executable(${COMPUTE_TEST_NAME} src/tests/rocprofvis_dm_compute_tests.cpp)
    target_include_directories(${COMPUTE_TEST_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../core/inc)
    target_include_directories(${COMPUTE_TEST_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../thirdparty/jsoncpp)
    target_link_libraries(${COMPUTE_TEST_NAME} PRIVATE ${PROJECT_NAME})
    target_link_libraries(${COMPUTE_TEST_NAME} PRIVATE Catch2::Catch2WithMain)
    target_link_libraries(${COMPUTE_TEST_NAME} PRIVATE roc-optiq-core)
    target_link_libraries(${COMPUTE_TEST_NAME} PRIVATE spdlog)
    target_link_libraries(${COMPUTE_TEST_NAME} PRIVATE sqlite3)
    target_link_libraries(${COMPUTE_TEST_NAME} PRIVATE json)	
    add_test(NAME ${COMPUTE_TEST_NAME} COMMAND ${COMPUTE_TEST_NAME} --input_file "${CMAKE_SOURCE_DIR}/sample/rocprof_compute_23ed6f36.db")
    set_tests_properties(${COMPUTE_TEST_NAME} PROPERTIES RUN_SERIAL ON)
    set_tests_properties(${COMPUTE_TEST_NAME} PROPERTIES WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
endif()
